app/k8s/services/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: healthcare-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
