app/k8s/services/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: healthcare-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
