app/k8s/services/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
        path: /*
      - backend:
          serviceName: api-service
          servicePort: 80
        path: /api/*
